<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".circuit.CircuitsMainFragment">

    <ScrollView
        android:id="@+id/track_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp">

        <LinearLayout
            android:id="@+id/scroll_lin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/driver_page"
                android:layout_gravity="center"
                android:text="@string/search_circuit_choose"/>

            <Button
                android:id="@+id/bahrain_button"
                style="@style/track_home_page_button"
                android:text="@string/bahrain"
                android:tag="1"/>
            <Button
                android:id="@+id/jeddah_button"
                style="@style/track_home_page_button"
                android:text="@string/jeddah"
                android:tag="2"/>
            <Button
                android:id="@+id/australia_button"
                style="@style/track_home_page_button"
                android:text="@string/australia"
                android:tag="3"/>
            <Button
                android:id="@+id/emilia_button"
                style="@style/track_home_page_button"
                android:text="@string/emilia_romagna"
                android:tag="4"/>
            <Button
                android:id="@+id/miami_button"
                style="@style/track_home_page_button"
                android:text="@string/miami"
                android:tag="5"/>
            <Button
                android:id="@+id/barcelona_button"
                style="@style/track_home_page_button"
                android:text="@string/barcelona_catalunya"
                android:tag="6"/>
            <Button
                android:id="@+id/monaco_button"
                style="@style/track_home_page_button"
                android:text="@string/monaco"
                android:tag="7"/>
            <Button
                android:id="@+id/azerbaijan_button"
                style="@style/track_home_page_button"
                android:text="@string/azerbaijan"
                android:tag="8"/>
            <Button
                android:id="@+id/canada_button"
                style="@style/track_home_page_button"
                android:text="@string/canada"
                android:tag="9"/>
            <Button
                android:id="@+id/silverstone_button"
                style="@style/track_home_page_button"
                android:text="@string/silverstone"
                android:tag="10"/>
            <Button
                android:id="@+id/red_bull_button"
                style="@style/track_home_page_button"
                android:text="@string/red_bull_ring"
                android:tag="11"/>
            <Button
                android:id="@+id/france_button"
                style="@style/track_home_page_button"
                android:text="@string/france"
                android:tag="12"/>
            <Button
                android:id="@+id/hungary_button"
                style="@style/track_home_page_button"
                android:text="@string/hungaroring"
                android:tag="13"/>
            <Button
                android:id="@+id/spa_button"
                style="@style/track_home_page_button"
                android:text="@string/spa"
                android:tag="14"/>
            <Button
                android:id="@+id/zandvoort_button"
                style="@style/track_home_page_button"
                android:text="@string/zandvoort"
                android:tag="15"/>
            <Button
                android:id="@+id/monza_button"
                style="@style/track_home_page_button"
                android:text="@string/monza"
                android:tag="16"/>
            <Button
                android:id="@+id/singapore_button"
                style="@style/track_home_page_button"
                android:text="@string/singapore"
                android:tag="17"/>
            <Button
                android:id="@+id/suzuka_button"
                style="@style/track_home_page_button"
                android:text="@string/suzuka"
                android:tag="18"/>
            <Button
                android:id="@+id/cota_button"
                style="@style/track_home_page_button"
                android:text="@string/circuit_of_the_americas"
                android:tag="19"/>
            <Button
                android:id="@+id/mexico_button"
                style="@style/track_home_page_button"
                android:text="@string/mexico"
                android:tag="20"/>
            <Button
                android:id="@+id/sao_paulo_button"
                style="@style/track_home_page_button"
                android:text="@string/sao_paulo"
                android:tag="21"/>
            <Button
                android:id="@+id/abu_dhabi_button"
                style="@style/track_home_page_button"
                android:text="@string/abu_dhabi"
                android:tag="22"/>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressbar_spinner"
        style="@style/progress_bar_spinner"
        android:visibility="invisible"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>