<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".driver.DriversMainFragment">

    <ScrollView
        android:id="@+id/track_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp">

        <LinearLayout
            android:id="@+id/scroll_lin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/driver_page"
                android:layout_gravity="center"
                android:text="@string/choose_a_driver"/>

            <Button
                android:id="@+id/max_button"
                style="@style/driver_home_page_button"
                android:text="@string/max_verstappen"
                android:tag="1"/>
            <Button
                android:id="@+id/charles_button"
                style="@style/driver_home_page_button"
                android:text="@string/cherles_leclerc"
                android:tag="2"/>
            <Button
                android:id="@+id/sergio_button"
                style="@style/driver_home_page_button"
                android:text="@string/sergio_perez"
                android:tag="3"/>
            <Button
                android:id="@+id/george_button"
                style="@style/driver_home_page_button"
                android:text="@string/george_russell"
                android:tag="4"/>
            <Button
                android:id="@+id/carlos_button"
                style="@style/driver_home_page_button"
                android:text="@string/carlos_sainz"
                android:tag="5"/>
            <Button
                android:id="@+id/lewis_button"
                style="@style/driver_home_page_button"
                android:text="@string/lewis_hamilton"
                android:tag="6"/>
            <Button
                android:id="@+id/lando_button"
                style="@style/driver_home_page_button"
                android:text="@string/lando_norris"
                android:tag="7"/>
            <Button
                android:id="@+id/esteban_button"
                style="@style/driver_home_page_button"
                android:text="@string/esteban_ocon"
                android:tag="8"/>
            <Button
                android:id="@+id/fernando_button"
                style="@style/driver_home_page_button"
                android:text="@string/fernando_alonso"
                android:tag="9"/>
            <Button
                android:id="@+id/valtteri_button"
                style="@style/driver_home_page_button"
                android:text="@string/valtteri_bottas"
                android:tag="10"/>
            <Button
                android:id="@+id/daniel_button"
                style="@style/driver_home_page_button"
                android:text="@string/daniel_riccardo"
                android:tag="11"/>
            <Button
                android:id="@+id/sebastian_button"
                style="@style/driver_home_page_button"
                android:text="@string/sebastian_vettel"
                android:tag="12"/>
            <Button
                android:id="@+id/kevin_button"
                style="@style/driver_home_page_button"
                android:text="@string/kevin_magnussen"
                android:tag="13"/>
            <Button
                android:id="@+id/pierre_button"
                style="@style/driver_home_page_button"
                android:text="@string/pierre_gasly"
                android:tag="14"/>
            <Button
                android:id="@+id/lance_button"
                style="@style/driver_home_page_button"
                android:text="@string/lance_stroll"
                android:tag="15"/>
            <Button
                android:id="@+id/mick_button"
                style="@style/driver_home_page_button"
                android:text="@string/mick_schumacher"
                android:tag="16"/>
            <Button
                android:id="@+id/yuki_button"
                style="@style/driver_home_page_button"
                android:text="@string/yuki_tsunoda"
                android:tag="17"/>
            <Button
                android:id="@+id/zhou_button"
                style="@style/driver_home_page_button"
                android:text="@string/zhou_guanyu"
                android:tag="18"/>
            <Button
                android:id="@+id/alexander_button"
                style="@style/driver_home_page_button"
                android:text="@string/alexander_albon"
                android:tag="19"/>
            <Button
                android:id="@+id/nicholas_button"
                style="@style/driver_home_page_button"
                android:text="@string/nicholas_latifi"
                android:tag="20"/>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressbar_spinner"
        style="@style/progress_bar_spinner"
        android:visibility="invisible"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>